--- a/cmdb-api/package.json
+++ b/cmdb-api/package.json
@@ -7,14 +7,16 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --runInBand --detectOpenHandles --forceExit ./src/tests",
     "dev": "nodemon index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jest": "^30.0.2",
     "nodemon": "^3.1.10",
-    "pg": "^8.16.2"
+    "pg": "^8.16.2",
+    "supertest": "^7.1.1"
   }
 }
